--- a/src/main/resources/templates/book/report_list.html
+++ b/src/main/resources/templates/book/report_list.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<html layout:decorate="~{layout}">
+<div layout:fragment="content">
+    <div class="container my-3">
+        <br>
+        <br>
+        <div id="repot_list" class="row align-items-start">
+            <!-- 신고된 댓글 목록 -->
+            <div class="col" >
+                <h3>신고된 댓글 목록</h3>
+                <table class="table">
+                    <thead class="table-dark">
+                    <tr>
+                        <th style="text-align: center;">댓글번호</th>
+                        <th style="text-align: center;">댓글내용</th>
+                        <th style="text-align: center;">신고자</th>
+                        <th style="text-align: center;">신고 내용</th>
+                        <th style="text-align: center;">신고 유형</th>
+                        <th style="text-align: center;">바로가기</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="report, loop : ${reportList}">
+                    <td style="display: flex;justify-content: center;" th:text="${report.review.id}"></td>
+                    <td th:text="${#strings.replace(report.review.content, '<p>', '')}"
+                        th:utext="${#strings.replace(#strings.replace(report.review.content, '<p>', ''), '</p>', '')}"></td>
+                    <td style="display: flex;justify-content: center;"
+                        th:text="${report.author.nickname}"></td>
+                    <td th:text="${report.content}"></td>
+                    <td style="display: flex;justify-content: center;" th:text="${report.reportType}"></td>
+                    <td>
+                        <a style="display: flex;justify-content: center;"
+                           th:href="@{|/book/${report.review.book.id}|}">링크</a>
+                    </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        </div>
+</div>
 </html>
