--- a/src/main/resources/templates/book/report_list.html
+++ b/src/main/resources/templates/book/report_list.html
@@ -29,7 +29,8 @@
                     <td style="display: flex;justify-content: center;" th:text="${report.reportType}"></td>
                     <td>
                         <a style="display: flex;justify-content: center;"
-                           th:href="@{|/book/${report.review.book.id}|}">링크</a>
+                           th:href="@{|/book/detail/${report.review.book.id}|}">링크</a>
+
                     </td>
                     </tr>
                     </tbody>
