--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -103,7 +103,7 @@
           // 결제를 요청하기 전에 orderId, amount를 서버에 저장하세요.
           // 결제 과정에서 악의적으로 결제 금액이 바뀌는 것을 확인하는 용도입니다.
           paymentWidget.requestPayment({
-            orderId: generateRandomString(),
+            orderId: [[${orders.RandomStringOrderId}]],
             orderName: orderName,
             successUrl: window.location.origin + "/success",
             failUrl: window.location.origin + "/fail",
