--- a/src/main/resources/templates/member/member_layout.html
+++ b/src/main/resources/templates/member/member_layout.html
@@ -16,6 +16,8 @@
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
             <li><a th:href="@{/member/modify}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">정보 수정</a>
             </li>
+            <li><a th:href="@{/member/myBook}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">나의 책</a>
+            </li>
             <li><a th:href="@{/apply/seller}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">판매자 신청</a>
             </li>
             <li><a th:href="@{/cartitem/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">장바구니</a>
