--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -204,6 +204,9 @@
                                     <a th:href="@{/wish/list}" class="dropdown-item">나의 서재(찜)</a>
                                 </li>
                                 <li>
+                                    <a th:href="@{/member/myBook}" class="dropdown-item">나의 책</a>
+                                </li>
+                                <li>
                                     <a href="checkout.html" class="dropdown-item">쿠폰함</a>
                                 </li>
                                 <li>
