결제성공후_버튼누르면 창 닫고 리다이렉트 fix/83

--- a/src/main/resources/templates/member/my_book.html
+++ b/src/main/resources/templates/member/my_book.html
@@ -21,16 +21,16 @@
                     <th>등록일</th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr th:each="book : ${bookList}">
+                <tbody th:each="orders : ${ordersList}">
+                <tr th:each="orderItem : ${orders.orderItemList}">
                     <td>
-                        <a th:href="@{|/book/detail/${book.id}|}">
-                            <img th:src="@{|/file/${book.thumbnailImg}|}" alt="사진" style="width: 150px; height: 220px;">
+                        <a th:href="@{|/book/detail/${orderItem.book.id}|}" >
+                            <img th:src="@{|/file/${orderItem.book.thumbnailImg}|}" alt="사진" style="width: 150px; height: 220px;" class="border">
                         </a>
                     </td>
-                    <th scope="row">[[${book.subject}]]</th>
-                    <td th:text="${book.author}"> 원</td>
-                    <td th:text="${#temporals.format(book.createDate, 'yyyy-MM-dd')}"></td>
+                    <th scope="row">[[${orderItem.book.subject}]]</th>
+                    <td th:text="${orderItem.book.author}"> 원</td>
+                    <td th:text="${#temporals.format(orderItem.orders.paymentDate, 'yyyy-MM-dd HH:mm')}"></td>
                     <td>
                         <a href="#" class="btn btn-sm btn-success">읽기</a>
                     </td>
