--- a/src/main/resources/templates/orders/ordersComplete.html
+++ b/src/main/resources/templates/orders/ordersComplete.html
@@ -21,6 +21,9 @@
         <div class="bottom-box border-dark d-flex justify-content-center">
             <a th:href="@{/}" class="btn btn-primary" style="width: 150px;">메인으로</a>
         </div>
+        <div class="bottom-box border-dark d-flex justify-content-center mt-3">
+            <a th:href="@{/member/myBook}" class="btn btn-primary" style="width: 150px;">나의 책</a>
+        </div>
     </div>
 </div>
 </html>
