--- a/src/main/resources/templates/book/report_list.html
+++ b/src/main/resources/templates/book/report_list.html
@@ -1,6 +1,8 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content">
     <div class="container my-3">
+        <!-- SweetAlert2 script -->
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
         <br>
         <br>
         <div id="repot_list" class="row align-items-start">
@@ -31,16 +33,63 @@
                         <a style="display: flex;justify-content: center;"
                            th:href="@{|/book/detail/${report.review.book.id}|}">링크</a>
                     </td>
-                        <td>
                             <!-- 삭제 버튼 -->
-                            <a th:href="@{|/report/delete/${report.id}|}" sec:authorize="isAuthenticated()" class="btn btn-sm btn-primary"
-                               style="width: 100px; margin-right:10px; margin-top:20px;">삭제</a>
-                        </td>
+                                <td>
+                                    <button class="deleteReport btn btn-sm btn-primary" sec:authorize="isAuthenticated()"
+                                            th:id="'deleteReport_' + ${report.id}"
+                                            style="width: 100px; margin-right:10px; margin-top:20px;">삭제</button>
+                                </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
         </div>
         </div>
+    <script>
+        $(document).ready(function () {
+            $(".deleteReport").click(function () {
+                var reportId = this.id.split('_')[1];
+
+                Swal.fire({
+                    title: '신고된 댓글을 삭제하시겠습니까?',
+                    text: '삭제한 후에는 복구할 수 없습니다.',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: '삭제',
+                    cancelButtonText: '취소',
+                    preConfirm: () => {
+                        return new Promise((resolve) => {
+                            // Ajax 요청을 통한 서버에서의 삭제 작업
+                            $.ajax({
+                                url: '/report/delete/' + reportId,
+                                type: 'GET',
+                                success: function (data) {
+                                    resolve(true);
+                                },
+                                error: function () {
+                                    resolve(false);
+                                }
+                            });
+                        });
+                    }
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        // SweetAlert2 확인 버튼을 누르면 실행되는 부분
+                        Swal.fire(
+                            '삭제되었습니다.',
+                            '',
+                            'success'
+                        ).then(() => {
+                            // 페이지 새로고침
+                            location.reload();
+                        });
+                    }
+                });
+            });
+        });
+    </script>
+
 </div>
 </html>
