--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -220,6 +220,11 @@
                                         <a th:href="@{/apply/list}" class="dropdown-item">판매자 신청 리스트</a>
                                     </li>
                                 </th:block>
+                                <th:block sec:authorize="hasRole('ADMIN')">
+                                    <li>
+                                        <a th:href="@{/report/list}" class="dropdown-item">신고 리스트</a>
+                                    </li>
+                                </th:block>
                             </ul>
                         </li>
                         <li class="nav-item">
