--- a/src/main/resources/templates/member/member_layout.html
+++ b/src/main/resources/templates/member/member_layout.html
@@ -67,8 +67,8 @@
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
             <li><a th:href="@{/apply/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">판매자 신청 리스트</a>
             </li>
-<!--            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">신고 리스트</a>-->
-<!--            </li>-->
+            <li><a th:href="@{/report/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">신고 리스트</a>
+            </li>
             <li><a th:href="@{/faq/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">FAQ</a>
             </li>
             <li><a th:href="@{/event/list}" class="link-body-emphasis d-inline-flex text-decoration-none rounded">이벤트</a>
