--- a/src/main/resources/templates/book/book_create_form.html
+++ b/src/main/resources/templates/book/book_create_form.html
@@ -64,7 +64,7 @@
         <label for="thumbnail" class="form-label">이미지 업로드</label>
         <input type="file" name="thumbnail" id="thumbnail" accept="image/png, image/gif, image/jpeg">
         <!-- 이미지 미리보기 -->
-        <img id="preview" src="#" alt="미리보기" style="max-width: 200px; max-height: 200px; display: none;">
+        <img id="preview" src="#" alt="미리보기" style="max-width: 200px; max-height: 200px;">
     </div>
     <!-- 도서 등록 버튼 -->
     <input type="submit" value="저장하기"  class="btn btn-primary my-2">
