--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -223,7 +223,7 @@
                                     <a th:href="@{/wish/list}" class="dropdown-item">나의 서재(찜)</a>
                                 </li>
                                 <li>
-                                    <a href="/" class="dropdown-item">쿠폰함</a>
+                                    <a th:href="@{/coupon/CouponList}" class="dropdown-item">쿠폰함</a>
                                 </li>
                                 <li>
                                     <a th:href="@{/apply/seller}" class="dropdown-item">판매자 신청하기</a>
