--- a/src/main/resources/templates/memberLayout.html
+++ b/src/main/resources/templates/memberLayout.html
@@ -12,6 +12,7 @@
     <!-- memberCSS   -->
     <link rel="stylesheet" type="text/css" href="/css/member/memberLayout.css">
     <!-- mailAlert.js   -->
+    <script src="/js/member/modifyMember.js"></script>
     <script src="/js/member/sendmail.js"></script>
     <script src="/js/orders/ordersConfirm.js"></script>
     <!-- SweelAlert2   -->
