--- a/src/main/resources/templates/event/event_detail.html
+++ b/src/main/resources/templates/event/event_detail.html
@@ -9,13 +9,9 @@
                 <span class="fs-5 fw-semibold" th:text="${event.title}"></span>
             </a>
             <div class="card my-3">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                     xmlns="http://www.w3.org/2000/svg" role="img"
-                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                     focusable="false"><title>이벤트</title>
-                    <rect width="100%" height="100%" fill="#55595c"/>
-                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                </svg>
+                <div style="width:100%; height:225px;">
+                    <img th:src="@{|/file/${event.thumbnailImg}|}" alt="사진" style="width:100%; height:100%;">
+                </div>
             </div>
             <div class="card my-3">
                 <div class="card-body">
