--- a/src/main/resources/templates/event/event_list.html
+++ b/src/main/resources/templates/event/event_list.html
@@ -16,13 +16,11 @@
                         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                             <div class="col" th:each="event : ${eventList}">
                                 <div class="card shadow-sm">
-                                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                         xmlns="http://www.w3.org/2000/svg" role="img"
-                                         aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                                         focusable="false"><title>이벤트</title>
-                                        <rect width="100%" height="100%" fill="#55595c"/>
-                                        <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                                    </svg>
+                                    <div class="card my-3">
+                                        <div style="width:100%; height:225px;">
+                                            <img th:src="@{|/file/${event.thumbnailImg}|}" alt="사진" style="width:100%; height:100%;">
+                                        </div>
+                                    </div>
                                     <div class="card-body">
                                         <p class="card-text" th:text="${event.title}"></p>
                                         <div class="d-flex justify-content-between align-items-center">
