--- a/src/main/resources/templates/member/modifyMemberForm.html
+++ b/src/main/resources/templates/member/modifyMemberForm.html
@@ -23,7 +23,7 @@
         <input type="password" th:field="*{password2}" class="form-control">
         <label for="password2" class="floatingPassword">비밀번호 변경 확인</label>
     </div>
-    <button type="submit" class="modify-button btn btn-primary w-100 py-2">정보수정</button>
+    <button id="modifyBtn" style="margin-bottom:10px;" type="submit" class="modify-button btn btn-primary w-100 py-2">정보수정</button>
     <a href="/" class="btn btn-secondary">홈으로</a>
 </form>
 </html>
