--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -204,7 +204,7 @@
                                     <a th:href="@{/wish/list}" class="dropdown-item">나의 서재(찜)</a>
                                 </li>
                                 <li>
-                                    <a href="checkout.html" class="dropdown-item">쿠폰함</a>
+                                    <a th:href="@{/coupon/CouponList}" class="dropdown-item">쿠폰함</a>
                                 </li>
                                 <li>
                                     <a th:if="${member != null and member.isSeller == true}"
