--- a/src/main/resources/templates/wish/wish_list.html
+++ b/src/main/resources/templates/wish/wish_list.html
@@ -38,7 +38,7 @@
                                 <th scope="col" style="text-align:center;">삭제 / 장바구니</th>
                             </tr>
                             </thead>
-                            <tbody>
+                            <tbody style="vertical-align: middle;">
                             <tr th:each="book : ${bookList}">
                                 <td>
                                     <div class="form-check">
@@ -62,12 +62,14 @@
                                                 </div>
                                                 <div class="d-flex">
                                                     <p style="font-size: 1.0em;">정가 </p>
-                                                    <del style="margin-left:10px; color:var(--gray-color-500);" th:text="${book.price  + ' 원'}"></del>
+                                                    <del style="margin-left:10px; color:var(--gray-color-500);"
+                                                         th:text="${#numbers.formatInteger(book.price, 0, 'COMMA')} + ' 원'"></del>
                                                 </div>
                                                 <div class="d-flex">
                                                     <p style="font-size: 1.0em; color:black;">할인가</p>
                                                     <div class="d-flex" style="color:red;">
-                                                        <div style="margin-left:10px; margin-right:10px;" th:text="${book.discountPrice}  + ' 원'"></div>
+                                                        <div style="margin-left:10px; margin-right:10px;"
+                                                             th:text="${#numbers.formatInteger(book.discountPrice, 0, 'COMMA')} + ' 원'"></div>
                                                         <div th:text=" ' ( ' + ${book.discount} +'  % 할인' + ' ) ' "></div>
                                                     </div>
                                                 </div>
@@ -75,8 +77,8 @@
                                         </div>
                                     </div>
                                 </td>
-                                <td th:text="${book.discountPrice  + ' 원'}"></td>
-                                <td style="align-items:center;">
+                                <td style="text-align:center;" th:text="${#numbers.formatInteger(book.discountPrice, 0, 'COMMA')} + ' 원'"></td>
+                                <td style="text-align:center;">
                                     <!-- 상품을 장바구니에 담는 버튼 -->
                                     <div class="btn btn-sm btn-outline-secondary">
                                         <a class="addCartItem" th:id="'addCartItem_' + ${book.id}"
