--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -271,6 +271,7 @@
                         })
 
 
+                    </script>>
                     <!-- JavaScript 코드 -->
                     <script>
                         // 페이지가 로드될 때 실행되는 함수
