보유하고 있는 책 구매 시 check 페이지로 리다이렉트 fix/83

--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -14,7 +14,7 @@
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <!--jquery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <title>토스페이먼츠 샘플 프로젝트</title>
+    <title>EatBook 주문/결제</title>
 </head>
 <body>
 <div class="result wrapper">
