--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/css/orders/orders_checkout.css"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>토스페이먼츠 샘플 프로젝트</title>
+    <title>EatBook 주문/결제</title>
     <!-- 결제위젯 SDK 추가 -->
     <script src="https://js.tosspayments.com/v1/payment-widget"></script>
 </head>
