orders_check.html 수정 fix/83

--- a/src/main/resources/templates/orders/orders_check.html
+++ b/src/main/resources/templates/orders/orders_check.html
@@ -9,10 +9,10 @@
         </div>
         <br/>
         <br/>
-        <div class="body-box">
+        <div class="body-box d-flex flex-column align-items-center">
             <h1>⚠ 확인해주세요 ⚠</h1>
             <br/>
-            <h4>이전에 구매한 상품입니다</h4>
+            <h4>이전에 구매한 상품입니다.</h4>
             <h4>전자책은 중복 구매가 불가능합니다.</h4>
             <br/>
         </div>
