--- a/src/main/resources/templates/cartitem/cart_list.html
+++ b/src/main/resources/templates/cartitem/cart_list.html
@@ -85,7 +85,8 @@
                                     </div>
                                 </div>
                             </td>
-                            <td style="text-align:center;" th:text="${#numbers.formatInteger(book.discountPrice, 0, 'COMMA')} + ' 원'"></td>
+                            <td style="text-align:center;"
+                                th:text="${#numbers.formatInteger(book.discountPrice, 0, 'COMMA')} + ' 원'"></td>
                             <td style="text-align:center;">
                                 <div class="btn btn-sm btn-outline-secondary">
                                     <a th:href="@{/orders/order/list}">주문</a>
@@ -100,37 +101,48 @@
                         </tbody>
                         <thead>
                         <tr>
+                            <th></th>
                             <th scope="col" style="text-align:center;">쿠폰 이름</th>
-                            <th scope="col" style="text-align:center;">쿠폰 내용</th>
                             <th scope="col" style="text-align:center;">쿠폰 할인가</th>
                             <th scope="col" style="text-align:center;">상세내용 보기</th>
                             <th scope="col" style="text-align:center;">쿠폰 사용</th>
                         </tr>
                         </thead>
-                        <tbody style="vertical-align: middle;">
+                        <tbody style="vertical-align: middle; text-align:center;">
                         <tr th:each="coupon : ${couponList}">
+                            <td></td>
                             <td>
-                                <div style="margin-bottom:10px;">
-                                    <span class="coupon-title" th:text="${coupon.title}"></span>
-                                </div>
-                            </td>
-                            <td>
-                                <div style="margin-bottom:10px;">
-                                    <span th:text="${coupon.content}"></span>
-                                </div>
+                                <span class="coupon-title" th:text="${coupon.title}"></span>
                             </td>
                             <td>
-                                <div class="d-flex">
-                                    <div style="margin-left:10px;" class="coupon-discount"
-                                         th:text="${#numbers.formatInteger(coupon.discount_price, 0, 'COMMA')} + ' 원'"></div>
+                                <div class="coupon-discount" th:text="${#numbers.formatInteger(coupon.discount_price, 0, 'COMMA')} + ' 원'"></div>
+                            </td>
+                            <td>
+                                <button type="button" class="btn btn-sm btn-outline-secondary" th:data-bs-toggle="'modal'" th:data-bs-target="'#modal-'+${coupon.id}">
+                                    상세 내용
+                                </button>
+                                <!-- Modal -->
+                                <div class="modal fade" th:id="'modal-'+${coupon.id}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5" th:text="${coupon.title}"></h1>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div style="width:100%; height:225px;">
+                                                    <img th:src="@{|/file/${coupon.thumbnailImg}|}" alt="사진" style="width:100%; height:100%;">
+                                                </div>
+                                                <div class="card-text" style="margin-top:30px;" th:text="${coupon.content}"></div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">확인</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </td>
-                            <td style="align-items:center;">
-                                <div class="btn btn-sm btn-outline-secondary coupon-use-btn" style="text-align:center;">
-                                    <a th:href="@{|/coupon/detail/${coupon.id}|}">상세 내용</a>
-                                </div>
-                            </td>
-                            <td style="align-items:center;">
+                            <td>
                                 <div class="btn btn-sm btn-outline-secondary coupon-use-btn" style="text-align:center;">
                                     <a>쿠폰 사용</a>
                                 </div>
@@ -147,7 +159,7 @@
                         </tr>
                         </tbody>
                         <tfoot style="vertical-align: middle; text-align:center;">
-                        <tr style="text-align:center;">
+                        <tr>
                             <td th:text="${cartItemCount}"></td>
                             <td>
                                 <span id="coupon-name"></span>
@@ -165,7 +177,6 @@
     </div>
     <script th:inline="javascript">
         $(document).ready(function() {
-            // 각 쿠폰 사용 버튼에 대한 클릭 이벤트 처리
             $('.coupon-use-btn').click(function() {
 
                 var couponName = $(this).closest('tr').find('.coupon-title').text();
