book_list, member_Profile, sellerBookList html table 수정 fix/83

--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -14,8 +14,8 @@
     </div>
 
     <div class="main-container">
-        <table class="table">
-            <thead class="table-dark">
+        <table class="table border border-secondary shadow">
+            <thead class="table-dark ">
             <tr>
                 <th>번호</th>
                 <th>이미지</th>
