member_layout 좌측 회원정보 추가 fix/83

--- a/src/main/resources/templates/member/member_layout.html
+++ b/src/main/resources/templates/member/member_layout.html
@@ -5,7 +5,9 @@
       <span class="fs-5 fw-semibold">마이 페이지</span>
     </a>
     <ul class="list-unstyled ps-0">
-      개인정보 띄우기
+      <li><span>아이디: </span> <span class="fw-bold">[[${member.username}]]</span></li>
+      <li><span>닉네임: </span> <span class="fw-bold">[[${member.nickname}]]</span></li>
+      <li><span>가입일: </span> <span class="fw-bold" th:text="${#temporals.format(member.createDate, 'yyyy-MM-dd')}"></span></li>
       <li class="border-top my-3"></li>
       <li class="mb-1">
         <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
