--- a/src/main/resources/templates/book/sellerBookList.html
+++ b/src/main/resources/templates/book/sellerBookList.html
@@ -32,9 +32,10 @@
                     <td>
                         <a th:href="@{|/book/modify/${book.Id}|}" class="btn btn-sm btn-success">수정</a>
                     </td>
-<!--                    <td>-->
+                        <!-- 주문, 유저가 보유하고 있는 책 삭제 시 오류 창-->
+                    <!--<td>-->
 <!--/*                        <a th:href="@{|/book/delete/${book.Id}|}" class="btn btn-sm btn-danger">삭제</a>*/-->
-<!--                    </td>-->
+                    <!--</td>-->
 
                 </tr>
                 </tbody>
